29-Jan-2011 Issue #23. GCC internal include paths are different on 64-bit Linux to 32-bit.

29-Jan-2011 Attempt at fixing OSUtilities detection of 64-bit Linux. Will fail on a 32-bit OS running on a 64-bit processor.

29-Jan-2011 Removed Opus.Core.IOutputPaths. Instead, Opus.Core.BaseOptionCollections has a property to assign new OutputPaths via a dictionary mechanism of a key (to identify different files) and a string (for the pathname of said file). The key must be derived from Opus.Core.FlagsBase, which is a class that simulates a derivable enum of values that are power of 2 (bitfield flags). OptionCollections are now simpler to implement. PostExecutes for builders have also changed to now accept a NodeCollection as the argument to give more context to the data.

29-Jan-2011 Fixed compilation of Mingw-4.5.0 package.

26-Jan-2011 Fixing unused variable warnings compiling Opus in MonoDevelop

23-Jan-2011 Issue #6. Added command line configuration argument to Qt; -Qt.installpath=<path> to override Opus searching for the Qt install directory.

23-Jan-2011 Added Opus.Core.State.RunningMono to detect whether Mono is being used.

23-Jan-2011 Issue #9. Added versioning to package compilation; the define OPUS_CORE_VERSION_MAJOR_MINOR is set in the compiler, where MAJOR and MINOR are the major and minor versions of the Opus.Core.dll assembly. Added new Opus.Core.State functions; Version to get the System.Version and VersionString to get the reduced major/minor string version.

23-Jan-2011 Fields marked as source files to C# assemblies can now be either Opus.Core.File or Opus.Core.FileCollection.

23-Jan-2011 Removed GetNestedDependents from Opus.Core.IModule and added it to its own interface Opus.Core.INestedDependents. Not all modules expect to have nested dependencies, so should not have to implement this function.

22-Jan-2011 Correcting a typo constructing the Windows Qt Moc executable pathname.
