@@ -1,3 +1,5 @@
+29-Jan-2011 Issue #23. Further fixes to include paths on 64-bit Linux, but this time for g++.
+
 29-Jan-2011 Issue #23. GCC internal include paths are different on 64-bit Linux to 32-bit.
 
 29-Jan-2011 Attempt at fixing OSUtilities detection of 64-bit Linux. Will fail on a 32-bit OS running on a 64-bit processor.
